--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,13 +5,13 @@ server:
 spring:
   datasource:
     driver-class-name: org.postgresql.Driver
-    url: jdbc:postgresql:///postgres
-    username: postgres
-    password: cardpassword
+    url: jdbc:postgresql:///${DB_DATABASE}
+    username: ${DB_USERNAME}
+    password: ${DB_PASSWORD}
     hikari:
       data-source-properties:
         socketFactory: com.google.cloud.sql.postgres.SocketFactory
-        cloudSqlInstance: noted-ensign-357703:asia-east1:card-db
+        cloudSqlInstance: ${DB_CLOUD_SQL_INSTANCE}
 
   jpa:
     hibernate:
