--- a/.github/workflows/google-cloudrun.yml
+++ b/.github/workflows/google-cloudrun.yml
@@ -122,10 +122,10 @@ jobs:
             --project ${{ env.PROJECT_ID }} \
             --format json \
             --update-env-vars SERVICE_NAME="Card Service" \
-            --update-env-vars DB_DATABASE=DB_DATABASE:latest \
-            --update-env-vars DB_USERNAME=DB_USERNAME:1 \
-            --update-env-vars DB_PASSWORD=DB_PASSWORD:1 \
-            --update-env-vars DB_CLOUD_SQL_INSTANCE=DB_CLOUD_SQL_INSTANCE:1 \
+            --update-secrets DB_DATABASE=DB_DATABASE:latest \
+            --update-secrets DB_USERNAME=DB_USERNAME:1 \
+            --update-secrets DB_PASSWORD=DB_PASSWORD:1 \
+            --update-secrets DB_CLOUD_SQL_INSTANCE=DB_CLOUD_SQL_INSTANCE:1 \
             --allow-unauthenticated
 
       # If required, use the Cloud Run url output in later steps
