--- a/.github/workflows/google-cloudrun.yml
+++ b/.github/workflows/google-cloudrun.yml
@@ -123,9 +123,10 @@ jobs:
             --format json \
             --update-env-vars SERVICE_NAME="Card Service" \
             --update-secrets DB_DATABASE=DB_DATABASE:latest \
-            --update-secrets DB_USERNAME=DB_USERNAME:1 \
-            --update-secrets DB_PASSWORD=DB_PASSWORD:1 \
+            --update-secrets DB_USERNAME=DB_USERNAME:2 \
+            --update-secrets DB_PASSWORD=DB_PASSWORD:2 \
             --update-secrets DB_CLOUD_SQL_INSTANCE=DB_CLOUD_SQL_INSTANCE:1 \
+            --service-account card-service-cloudrun@noted-ensign-357703.iam.gserviceaccount.com
             --allow-unauthenticated
 
       # If required, use the Cloud Run url output in later steps
