--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,14 +6,16 @@ spring:
   datasource:
     driver-class-name: org.postgresql.Driver
     url: jdbc:postgresql:///${DB_DATABASE:postgres}
-    username: ${DB_USERNAME:postgres}
-    password: ${DB_PASSWORD:cardpassword}
+    username: ${DB_USERNAME:card-service-cloudrun@noted-ensign-357703.iam}
+    password: ${DB_PASSWORD:3213}
     hikari:
       minimum-idle: 2
       maximum-pool-size: 5
       data-source-properties:
         socketFactory: com.google.cloud.sql.postgres.SocketFactory
         cloudSqlInstance: ${DB_CLOUD_SQL_INSTANCE:noted-ensign-357703:asia-east1:card-db}
+        enableIamAuth: true
+        sslmode: disable
 
   jpa:
     hibernate:
